--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "redux-store",
   "version": "1.0.0",
   "description": "HW # 26 UC Davis Coding Boot camp",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,6 @@
   "homepage": "https://github.com/Nmounce/redux-store#readme",
   "dependencies": {
     "concurrently": "^6.4.0",
-    "react-redux": "^7.2.6"
+    "if-env": "^1.0.4"
   }
 }
